--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
                             <label for="search" class='forum'>Search For Recipes</label><br>
                             <input type="text" id="search" class="search" required><br>
                             </p>
-                            <p>
-                            <button class='submit' class='btn'>Submit Search</button>
+                            <p class='btn'>
+                            <button class='submit' class='firstbtn'>Submit Search</button>
                         </p>
                     </form>
                 </div>
             
         <div class="results">
             <nav>
-                    <button class="prev">Previous 10</button>
-                    <button class="next">Next 10</button>
+                    <!-- <button class="prev">Previous 10</button>
+                    <button class="next">Next 10</button> -->
             </nav>
             <section>
 
